--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
   color: #2B283A;
+  font-family: 'Karla', sans-serif;
+}
+.title {
+  font-weight: 700;
 }
 
 .App {
@@ -18,6 +22,7 @@
 
 p {
   font-size: 13.1072px;
+  font-family: 'Inter', sans-serif;
   line-height: 16px;
   color: #4A4E74;
 }
@@ -38,8 +43,48 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   border-radius: 10px;
   text-align: center;
   padding: 33px;
+}
+
+.dice-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 18px;
+  flex-wrap: wrap;
+  margin-block: 26px;
+}
+
+.dice {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 3.81277px;
+  font-size: 20.5889px;
+  font-weight: 700;
+  width: 35.84px;
+  height: 35.84px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+all: unset;
+background: #5035FF;
+box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+border-radius: 3.81277px;
+font-weight: 700;
+color: #FFFFFF;
+font-weight: 700;
+font-size: 16.384px;
+line-height: 19px;
+width: 92.16px;
+height: 35.84px;
+}
+
+.green {
+  background-color: #59E391;
 }
