--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #2B283A;
+  color: #2b283a;
   font-family: 'Karla', sans-serif;
 }
 .title {
@@ -24,7 +24,8 @@ p {
   font-size: 13.1072px;
   font-family: 'Inter', sans-serif;
   line-height: 16px;
-  color: #4A4E74;
+  color: #4a4e74;
+  margin-top: 5px;
 }
 
 .board {
@@ -32,7 +33,7 @@ p {
   width: 360px;
   display: flex;
   align-items: center;
-  background-color: #0B2434;
+  background-color: #0b2434;
   padding: 20px;
 }
 
@@ -43,48 +44,47 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   border-radius: 10px;
   text-align: center;
   padding: 33px;
 }
 
 .dice-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 18px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
   margin-block: 26px;
 }
 
 .dice {
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 3.81277px;
   font-size: 20.5889px;
   font-weight: 700;
-  width: 35.84px;
-  height: 35.84px;
+  width: 45px;
+  height: 45px;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .button {
-all: unset;
-background: #5035FF;
-box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
-border-radius: 3.81277px;
-font-weight: 700;
-color: #FFFFFF;
-font-weight: 700;
-font-size: 16.384px;
-line-height: 19px;
-width: 92.16px;
-height: 35.84px;
-transition: all .4s;  
-cursor: pointer;
+  all: unset;
+  background: #5035ff;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+  font-weight: 700;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 16.384px;
+  line-height: 19px;
+  padding: 6.4px 21.12px;
+  width: 70px;
+  transition: all 0.4s;
+  cursor: pointer;
 }
 
 .button:active {
@@ -92,5 +92,5 @@ cursor: pointer;
 }
 
 .green {
-  background-color: #59E391;
+  background-color: #59e391;
 }
